--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ p.no__result {
   .panel-default
   > .panel-heading
   a[aria-expanded="true"]
-  i:after {
+  i.fa:after {
   content: "\f0d7";
 }
 
@@ -518,7 +518,7 @@ p.no__result {
   .panel-default
   > .panel-heading
   a[aria-expanded="false"]
-  i:after {
+  i.fa:after {
   content: "\f0d8";
 }
 
@@ -676,6 +676,11 @@ p.no__result {
 }
 
 @media screen and (max-width: 440px) {
+  #product .container #product__list .product__item .product__img {
+    width: 90px;
+    height: 135px;
+  }
+
   header .container-fluid {
     padding: 20px;
   }
